--- a/app/views/app/navigation.html
+++ b/app/views/app/navigation.html
@@ -12,7 +12,7 @@
       <section layout="row" layout-sm="column" layout-align="center center" layout-wrap class="navigationToolBarSection">
         <md-button md-no-ink class="md-primary">讨论区</md-button>
         <md-button md-no-ink class="md-primary" ui-sref="app.project.list">项目大厅</md-button>
-        <md-button md-no-ink class="md-primary">消息通知</md-button>
+        <md-button md-no-ink class="md-primary" ui-sref="app.messages">消息通知</md-button>
         <md-button md-no-ink class="md-primary" ui-sref="{{infoSref}}" aria-label="个人信息">{{user.name}}</md-button>
       </section>
     </div>
