--- a/app/views/app/pages/project/list.html
+++ b/app/views/app/pages/project/list.html
@@ -1,56 +1,40 @@
-<md-list>
-  <md-list-item class="md-3-line" ng-repeat="project in projects">
-    <div class="md-list-item-text" layout="row">
-      <label>项目名称:</label>
-      <span>{{ project.name }}</span>
-      <label>创建人:</label>
-      <span>{{ project.creator.name }}</span>
-      <label>项目介绍</label>
-      <span> {{ project.introduction }}</span>
-      <md-button ng-click="detail(project)">查看详情</md-button>
-    </div>
-  </md-list-item>
-</md-list>
+<div  class="messageMainView">
+  <div class="publishBackground">
+    <div class="publishBackgroundIndex1-6"></div>
+    <div class="publishBackgroundIndex1-5"></div>
+    <div class="publishBackgroundIndex1-4"></div>
+    <div class="publishBackgroundIndex1-3"></div>
+    <div class="publishBackgroundIndex1-2"></div>
+    <div class="publishBackgroundIndex1-1"></div>
 
-
-<div class="homeProjectExhibition" layout="column" layout-align="center center">
-  <div class="projectExhibitionTitle">在创项目展示</div>
-  <div class="projectExhibitionContent" layout="column" layout-align="center center">
-    <div ng-repeat="project in projects" class="projectExhibitionCell" layout="row" layout-align="center center">
-      <div class="projectExhibitionCellTitle" layout="column" layout-align="center center">
-        <span>{{project.name}}</span>
-        <div class="projectExhibitionCellTitleTriangle isProgressive-{{project.isProgressive}}">
-          <span>累进</span>
-        </div>
-        <div layout="row" layout-align="center center">
-          <img src="images/home_projectExhibition_title.png"/>
-          <span>负责人:</span>
-          <span>{{project.team.charge_person.name}}</span>
-        </div>
-      </div>
-      <div class="projectExhibitionCellRecruit" layout="column" layout-align="center center">
-        <div layout="row" layout-align="center center">
-          <span class="isFullMenmber-{{project.team.member.length >= project.member_number}}">{{project.team.member.length}}</span>
-          <span>/{{project.member_number}}</span>
-        </div>
-        <span>招募情况</span>
-      </div>
-      <div class="projectExhibitionCellState" layout="column" layout-align="center center">
-        <span>{{project.state}}</span>
-      </div>
-      <div class="projectExhibitionCellDate" layout="column" layout-align="center center">
-        <span>{{project.startTime}}</span>
-        <span>{{project.endTime}}</span>
-        <md-button layout="column" layout-align="center center" ng-click="detail(project)">
-          <img src="images/home_projectExhibition_date.png"/>
-          <span>查看详情</span>
-        </md-button>
-        <div class="projectExhibitionCellDateTriangle"></div>
-      </div>
-
-    </div>
+    <div class="publishBackgroundIndex2-6"></div>
+    <div class="publishBackgroundIndex2-5"></div>
+    <div class="publishBackgroundIndex2-4"></div>
+    <div class="publishBackgroundIndex2-3"></div>
+    <div class="publishBackgroundIndex2-2"></div>
+    <div class="publishBackgroundIndex2-1"></div>
   </div>
-  <div class="projectExhibitionMoreDiv">
-    <button>查看更多</button>
+
+  <div class="messageDiv">
+    <md-toolbar class="md-theme-light">
+      <h2 class="md-toolbar-tools">
+        <span>项目广场</span>
+      </h2>
+    </md-toolbar>
+    <md-content>
+      <span class="md-title" ng-show="hasProject">没有任何项目</span>
+      <md-list>
+        <md-list-item ng-repeat="project in projects">
+          <div class="md-list-item-text">
+            <h3>项目名称: {{ project.name }}</h3>
+            <h4>创建人: {{ project.creator.name }}</h4>
+            <h4>项目介绍: {{ project.introduction.length < 20 ? project.introduction : project.introduction.slice(0, 20) + '...' }}</h4>
+          </div>
+          <md-button class="md-secondary" ng-click="detail(project)">查看详情</md-button>
+          <md-divider ng-if="!$last"></md-divider>
+        </md-list-item>
+      </md-list>
+    </md-content>
+
   </div>
 </div>
