admin.login admin.app.project 把项目审核放到admin.app.project

--- a/app/styles/background.scss
+++ b/app/styles/background.scss
@@ -30,6 +30,10 @@
 
 }
 
+.authBackgroundIndex2.adminLoginBackground {
+  border-color: #3F51B5 transparent transparent transparent;
+}
+
 .authBackgroundIndex3 {
 
   position: absolute;
