--- a/app/views/app/pages/info/user.html
+++ b/app/views/app/pages/info/user.html
@@ -45,7 +45,7 @@
               <h4>{{ project.deadline }}</h4>
               <p>{{ project.keyword.join(' / ') }}</p>
             </div>
-            <md-button class="md-secondary">Respond</md-button>
+            <md-button class="md-secondary">查看详情</md-button>
             <md-divider ng-if="!$last"></md-divider>
           </md-list-item>
         </md-list>
@@ -71,7 +71,7 @@
               <h4>{{ project.deadline }}</h4>
               <p>{{ project.keyword.join(' / ') }}</p>
             </div>
-            <md-button class="md-secondary">Respond</md-button>
+            <md-button class="md-secondary">查看详情</md-button>
             <md-divider ng-if="!$last"></md-divider>
           </md-list-item>
         </md-list>
