--- a/app/styles/join.scss
+++ b/app/styles/join.scss
@@ -62,6 +62,10 @@ md-dialog .md-dialog-content {
 
 }
 
+.joinToolBarBackgroundIndex2.adminProDetailBackground {
+  border-color: transparent #3F51B5 transparent transparent;
+}
+
 .joinToolBarBackgroundIndex3 {
 
   position: absolute;
