--- a/app/views/admin/checkproject.html
+++ b/app/views/admin/checkproject.html
@@ -33,11 +33,11 @@
         <div class="paginationBtn">
           <div>
             <md-button class="md-primary" ng-disabled="publishedProPreviousBtnDisabled" ng-click="">前一页</md-button>
-            <md-progress-circular md-mode="{{pcMode[1]}}" md-diameter="40px"></md-progress-circular>
+            <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
           </div>
           <div>
             <md-button class="md-primary" ng-disabled="publishedProNextBtnDisabled" ng-click="">后一页</md-button>
-            <md-progress-circular md-mode="{{pcMode[2]}}" md-diameter="40px"></md-progress-circular>
+            <md-progress-circular md-mode="{{pcMode}}" md-diameter="40px"></md-progress-circular>
           </div>
         </div>
       </md-tab-body>
